--- a/problem-set-1/index.html
+++ b/problem-set-1/index.html
@@ -7,15 +7,19 @@
   <title>Graphics</title>
   <script src="jquery.js"></script>
   <script src="script.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
       <canvas id="canvas">
       </canvas>
       <aside>
+        <div class="status">Status</div>
         <div class="output"></div>
-        <input id="input" type="text">
+        <div class="wrapper">
+          <span>➜</span>
+          <input id="input" type="text">
+        </div>
       </aside>
   </main>
 </body>
