--- a/problem-set-1/svg/index.html
+++ b/problem-set-1/svg/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Graphics</title>
-  <script src="jquery.js"></script>
+  <script src="../common/jquery.js"></script>
   <script src="script.js"></script>
   <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
-      <canvas id="canvas">
-      </canvas>
+      <svg id="svg">
+      </svg>
       <aside>
         <div class="status">Status</div>
         <div class="output"></div>
