--- a/problem-set-1/index.html
+++ b/problem-set-1/index.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Graphics</title>
-  <script src="../common/jquery.js"></script>
+  <script src="common/jquery.js"></script>
   <script src="script.js"></script>
-  <script data-main="scripts/main" src="scripts/require.js"></script>
+  <script data-main="app" src="app/require.js"></script>
   <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
-      <svg id="svg">
+      <svg id="pane">
       </svg>
       <aside>
-        <div class="status">Status</div>
-        <div class="output"></div>
+        <div id="status" class="status">Status</div>
+        <div id="output" class="output"></div>
         <div class="wrapper">
           <span>➜</span>
           <input id="input" type="text">
