--- a/problem-set-1/index.html
+++ b/problem-set-1/index.html
@@ -13,10 +13,12 @@
 <body>
   <main>
       <svg id="pane">
+        <div id="pointer">↗</div>
       </svg>
       <aside>
         <div id="status" class="status">Status</div>
-        <div id="output" class="output"></div>
+        <div id="output" class="output">
+        </div>
         <div class="wrapper">
           <span>➜</span>
           <input id="input" type="text">
