--- a/wireframe/index.html
+++ b/wireframe/index.html
@@ -7,10 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Graphics</title>
   <link type="text/css" rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
 </head>
 
-<body onload="initialize()">
-    <canvas id="pane" width="640" height="480"></canvas>
+<body>
+  <svg id="main"></svg>
 </body>
+
 </html>
+<script src="app.js"></script>
