--- a/problem-set-2/index.html
+++ b/problem-set-2/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <main id="main">
-    <!-- Pane will be injected here -->
+    <canvas  width="570" height="570"></canvas>
   </main>
 </body>
 
